--- a/TheTopBulgarianChannels/appsettings.json
+++ b/TheTopBulgarianChannels/appsettings.json
@@ -1,10 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
-}
+  
+    "ConnectionStrings": {
+      "Default": "Server=.\\SQLEXPRESS;Database=TopChannelsDB;Trusted_Connection=True;"
+    },
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
