Change in the name of the server

--- a/TheTopBulgarianChannels/appsettings.json
+++ b/TheTopBulgarianChannels/appsettings.json
@@ -1,8 +1,8 @@
 {
-  
-    "ConnectionStrings": {
-      "Default": "Server=.\\SQLEXPRESS;Database=TopChannelsDB;Trusted_Connection=True;"
-    },
+
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-O38JBD6;Database=TopChannelsDB;Trusted_Connection=True;"
+  },
 
     "Logging": {
       "LogLevel": {
